--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "citrus-hack",
+  "name": "layout-citrus",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
-  },
-  "resolutions": {
-    "styled-components": "^5"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
@@ -21,7 +19,7 @@
     "email-validator": "^2.0.4",
     "firebase": "^8.3.0",
     "moment": "^2.29.1",
-    "next": "10.0.9",
+    "next": "12.1.4",
     "next-images": "^1.8.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -31,6 +29,7 @@
     "timeago.js": "^4.0.2"
   },
   "devDependencies": {
-    "url-loader": "^4.1.1"
+    "eslint": "8.12.0",
+    "eslint-config-next": "12.1.4"
   }
 }
