--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@nextui-org/react": "^1.0.6-beta.5",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
+    "@nextui-org/react": "^1.0.6-beta.5",
     "antd": "^4.19.5",
     "better-react-spinkit": "^2.0.4",
     "email-validator": "^2.0.4",
@@ -22,6 +22,7 @@
     "next": "12.1.4",
     "next-images": "^1.8.4",
     "react": "17.0.1",
+    "react-big-calendar": "^0.40.0",
     "react-dom": "17.0.1",
     "react-firebase-hooks": "^3.0.2",
     "styled-components": "^5.2.1",
